kubernetes/apps/infra/traefik/base/helmrepository.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
