kubernetes/apps/infra/traefik/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.smadja.dev`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: smadja.dev
        sans:
          - "*.smadja.dev"
